content styled and in columns, need ordering and overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-* {
+/* * {
   border: 1px solid #f00 !important;
-}
+} */
 
 @font-face {
   font-family: 'ACaslonPro-Regular';
@@ -21,16 +21,15 @@
 /*/NAVBAR*/
 
 .navbar {
+  z-index: 50;
+  background-color: white;
   position: sticky;
   width: auto;
   align-items: center;
   display: flex;
   max-height: 122px;
-  /* max-width: 500px; */
-  /* flex: 1; */
   justify-content: space-between;
   padding: 4% 8% 4% 8%;
-  /* max-width: 1440px; */
   top: 0;
 }
 
@@ -44,17 +43,9 @@
   font-weight: bold;
 }
 
-
-/* .navbar > p:last-of-type {
-  padding-left: 20%;
-} */
-
 .navbar > img {
   height: 5%;
-  width: 30%;
-  /* flex-direction: row;
-  justify-content: flex-start; */
-  /* float: left; */
+  width: 24%;
 }
 
 .hamburger,
@@ -66,6 +57,10 @@
 }
 
 /*/CAROUSEL*/
+
+.carousel {
+  max-width: 1440px;
+}
 
 .carousel-text-container {
   position: absolute;
@@ -104,27 +99,56 @@
 
 /*/POSTS*/
 
-.post {
-  width: 33.3%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 30px;
+.post-container {
+  width: 100%;
+  column-count: 3;
+  column-gap: 1em;
+  padding: 5% 5% 5% 5%;
+  height: auto;
 }
+
+.post-wrapper {
+  margin: 10% 1% 1% 2%;
+}
+
+/* .post-wrapper {
+  display: block;
+  width: 30%;
+  column-count: 3;
+  column-gap: 1em;
+  margin: 0% 4% 4% 0%;
+} */
+
+.post {
+  /* background-color: teal; */
+}
+
+.post > img {
+  padding-top: 1%;
+   width: 100%;
+}
+
 
 
 .post-title,
 .post-byline,
 .post-link {
   font-family: 'Springville-Regular3', serif;
+  margin-top: 2%;
+}
+
+.post-byline,
+.post-link {
+  font-size: 1vw;
 }
 
 .post-link {
+  display: inline;
   text-decoration: underline;
 }
 
 .post-title{
-  font-size: 3vw;
+  font-size: 2.8vw;
 }
 
 .post-title:hover {
@@ -141,7 +165,6 @@
 
 .footer {
   text-align: center;
-  position: absolute;
   bottom: 0;
   width: 100%;
   font-size: 1vw;
